# comicapi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
comicapi/: __init__.py  comet.py  comicarchive.py  comicbookinfo.py  comicinfoxml.py  filenamelexer.py  filenameparser.py  genericmetadata.py  utils.py
tests/: comicarchive_test.py
