[metadata]
name = comicapi
version = attr:comicapi.__version__
description = Comic archive (cbr/cbz/cbt) and metadata utilities. Extracted from the comictagger project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/comictagger/comictagger
author = "ComicTagger team",
author_email = "comictagger@gmail.com",
maintainer = @OzzieIsaacs
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    natsort>=8.1.0
    pillow>=4.3.0
    py7zr
    pycountry
    text2digits
    wordninja
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.extras_require]
cbr =
    unrar-cffi>=0.2.2

[options.package_data]
comicapi =
    data/*

[flake8]
max-line-length = 120
extend-ignore = E203, E501, A003
extend-exclude = venv, build, dist
